--- a/css/styles.css
+++ b/css/styles.css
@@ -152,6 +152,11 @@ li {
     list-style: none;
 }
 
+.contact-type {
+    margin: 0;
+    pa
+}
+
 .action_buttons {
     clear: both;
     display: flex;
